--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>Sedans</h1>
                 <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.
                 </p>
-                <button>Learn More</button>
+                <a href="#">Learn More</a>
             </section>
             <section class="suvs">
                 <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 64 40">
@@ -24,7 +24,7 @@
                 </svg>
                 <h1>Suvs</h1>
                 <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
-                <button>Learn More</button>
+                <a href="#">Learn More</a>
             </section>
             <section class="luxury">
                 <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 64 40">
@@ -32,7 +32,7 @@
                 </svg>
                 <h1>Luxury</h1>
                 <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
-                <button>Learn More</button>
+                <a href="#">Learn More</a>
             </section>
         </main>
     </body>
